<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/nas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/tekst_posta" />

        <EditText
            android:id="@+id/naslov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="250" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/kat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/kategorija" />

        <Spinner
            android:id="@+id/kategorije"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
     
            android:prompt="@string/blanko"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/dat_poc" />

        <EditText
            android:id="@+id/dat_poc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/datum_format"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:inputType="date" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/dat_zav" />

        <EditText
            android:id="@+id/dat_zav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/datum_format"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:inputType="date" />
        
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/vreme_odrzavanja" />

        <EditText
            android:id="@+id/vreme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/vreme_format"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:inputType="time" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/lokacija" />

        <EditText
            android:id="@+id/lokacija"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="250" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/slika" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">
            
            <Button
                android:id="@+id/select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:textSize="12dp"            
                android:text="@string/select" />

            <EditText
                android:id="@+id/slika"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:inputType="textPersonName" />
            
        </LinearLayout>

       
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/tekst" />

        <EditText
            android:id="@+id/post_tekst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLength="5000"
            android:scrollbars="vertical" />
        
        <Button
            android:id="@+id/bttn_addpost"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textSize="19dp"
            android:text="@string/sesti_aktiviti" />
        
   </LinearLayout>
   
</ScrollView>


