<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="login_dialog"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/korime" />

    <EditText
        android:id="@+id/log_korime"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:maxLength="100"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/pass" />

    <EditText
        android:id="@+id/log_sifra"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_width="234dp"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_width="234dp"
        android:layout_marginLeft="10dp" >

        <Button
            android:id="@+id/bttn_dis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_dis" />

        <Button
            android:id="@+id/bttn_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:text="@string/log_log" />

    </LinearLayout>

</LinearLayout>
