<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_marginBottom="15dp" >

    <Button
        android:id="@+id/prev_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bttn_prev" />

    <TextView
        android:id="@+id/strana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strana"
        android:textColor="#000000"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/next_bttn"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/bttn_next" />

</LinearLayout>
