<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".PostActivity" >

    <ScrollView
        android:id="@+id/kontejner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.35">
        
        <LinearLayout
            android:id="@+id/glavni_post"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal" >

               <TextView
                   android:id="@+id/datum"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="5dp"
                   android:text="@string/datum" 
                   android:textSize="17sp"
                   android:textColor="#FFCC00" />

               <TextView
                   android:id="@+id/kategorija"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="20dp"
                   android:text="@string/kategorija"
                   android:textSize="22sp"
                   android:textColor="#FF850B" />

          </LinearLayout>
    
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:orientation="vertical" >

              <TextView
                  android:id="@+id/naslov"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:layout_margin="5dp"
                  android:text="@string/tekst_posta"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:textSize="20sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/dat_odr"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="5dp"
                  android:layout_marginTop="15dp"
                  android:text="@string/dat_odr"
                  android:textSize="15sp"
                  android:textStyle="bold" />
              
              <LinearLayout
                  android:id="@+id/calendar1"
                  android:layout_width="match_parent"
                  android:layout_height="350dp"
                  android:orientation="vertical"
                  android:layout_margin="10dp" >
              </LinearLayout>

              <TextView
                  android:id="@+id/lokacija"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="5dp"
                  android:layout_marginTop="10dp"
                  android:text="@string/lokacija"
                  android:textSize="15sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/vreme"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="5dp"
                  android:layout_marginTop="10dp"
                  android:text="@string/vreme_odrzavanja"
                  android:textSize="15sp"
                  android:textStyle="bold" />
          </LinearLayout>
    
         <ImageView
             android:id="@+id/slika"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="0.68"
             android:adjustViewBounds="true"/>
    
         <TextView
             android:id="@+id/tekst"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tekst"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="15dp" />

        <fragment
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_margin="10dp" />      

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp" >

             <TextView
                 android:id="@+id/kom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.55"
                 android:layout_marginLeft="5dp"
                 android:textSize="17sp"
                 android:text="@string/kom" />

             <Button
                 android:id="@+id/bttn_kom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:text="@string/bttn_kom"
                 android:textSize="12sp" />

         </LinearLayout>
         
         <LinearLayout
             android:id="@+id/komentari_ll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_marginTop="15dp"
             android:layout_weight="1.35"
             android:orientation="vertical" >

        </LinearLayout>
     
       </LinearLayout>      
       
    </ScrollView>
  
</LinearLayout>