<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PostActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst_kom"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/kom_tekst"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:maxLength="1500"
        android:lines="5"
        android:gravity="top|left"
        android:scrollbars="vertical"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/bttn_postavi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bttn_postavi" />

        <Button
            android:id="@+id/bttn_otkazi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="72dp"
            android:text="@string/log_dis" />

    </LinearLayout>

</LinearLayout>